--- a/index.html
+++ b/index.html
@@ -122,6 +122,56 @@
 
 
 
+    <section class="container-fluid" id="ausflugsziele">
+      <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Ausflugsziele</h3>
+      Bernauer Umgebung/Brandenburg
+      Nationalpark Unteres Odertal
+      Wildpark Schorfheide
+      Schiffshebewerk Niederfinow
+      Kloster Chorin
+      Ökodorf Brodowin
+      Sportforum Bernau
+      Stadtmaueranlagen und Heimatanalgen Bernau
+      Selbstpflücke Elisenau
+      Zoo Eberswalde
+      Museumspark Rüdersdorf
+      Spreewald
+      Sportforum Bernau
+      Werbellinsee rudern, kayafahren, personenschifffahrt - ehemaliges Jagdhotel von Göring
+      Liepnitzsee
+      Wandlitz Ausflugsdampfer?
+      Flugplatzmuseum Eberswalde-Finow
+      Gedenkstätte und Museum Sachsenhausen
+      Therme Bad Saarow
+      Bauhausensemble Bernau mit öffentlichem Schwimmbad
+      Fahrradverleih
+      Klettergarten Hobrechtsfelde
+      Natur in Barnim.de  --> Bucher Forst?
+      Tropical Islands
+
+Jahreszeitenabhägnig
+
+Pilze Sammeln
+Hussitenfest
+
+      Berlin
+      Tränenpalast
+      Klettern
+
+
+    </div>
+  </div>
+
+  <div class="row">
+
+
+  </div>
+      </div>
+    </section>
+
 
 
     <section class="container-fluid" id="verfuegbarkeit">
@@ -133,7 +183,7 @@
 
 
 
-  <center><div align="center" style="display:inline-block;"><iframe scrolling="no" width="518" height="770" frameBorder="0" style="overflow:hidden;border:none" src="http://www.fewo-direkt.de/haow/widgets/calendar.html?propertyId=2499750&unitId=3043289&monthCount=12&orientation=full&site=homeaway_de"></iframe><a href="http://www.fewo-direkt.de/ferienwohnung-ferienhaus/p2499750" style="display:block;text-align:center;margin-top:-30px; font-size:12px;" rel="nofollow">FeWo-direkt.de #2499750</a></div>
+  <center><div align="center" style="display:inline-block;"><iframe scrolling="no" width="518" height="770" frameBorder="0" style="overflow:hidden;border:5px" src="http://www.fewo-direkt.de/haow/widgets/calendar.html?propertyId=2499750&unitId=3043289&monthCount=12&orientation=full&site=homeaway_de"></iframe><a href="http://www.fewo-direkt.de/ferienwohnung-ferienhaus/p2499750" style="display:block;text-align:center;margin-top:-30px; font-size:12px;" rel="nofollow">FeWo-direkt.de #2499750</a></div>
 </center>
   </div>
 </div>
