more sections & started with a gallery

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <title>Ferienhaus "Lilie" in Bernau</title>
 
 
@@ -22,26 +26,13 @@
 
 
 
-    <nav class="container-fluid visible-md-block visible-lg-block" id="main-nav" style="top: 0px;">
-      <div class="container">
-	<ul>
-	  <li><a class="scroll-link" data-target="location" href="#lage">Lage</a></li>
-	  <li><a class="scroll-link" data-target="schedule" href="#ausstattung">Ausstattung</a></li>
-	  <li><a class="scroll-link" data-target="people" href="#fotos">Fotos</a></li>
-	  <li><a class="scroll-link" data-target="faq" href="#verfuegbarkeit">Verfügbarkeit</a></li>
-	</ul>
-      </div>
-    </nav>
-
-
-
 
     <header class="container-fluid" id="header">
 
       <div class="container">
 	<div class="row">
 	  <div class="col-md-8 col-md-offset-2 text-center">
-	    <div id="countdown"><h1>Ferienhaus "Lilie" <h1><p> <h2> Eine kleine Oase in Bernau bei Berlin</h2></div>
+	    <div id="countdown"><h1>Ferienhaus "Lilie"<h1><p> <h2> Eine kleine Oase in Bernau bei Berlin</h2></div>
 	  </div>
 	</div>
       </div>
@@ -49,6 +40,61 @@
       <div class="bg-overlay-gradient"></div>
       <div class="header-bg"></div>
     </header>
+
+
+
+
+
+    <nav class="container-fluid visible-md-block visible-lg-block" id="main-nav" style="top: 0px;">
+      <div class="container">
+	<ul>
+	  <li><a class="scroll-link" href="#lage">Lage</a></li>
+	  <li><a class="scroll-link" href="#ausstattung">Ausstattung</a></li>
+	  <li><a class="scroll-link" href="#fotos">Fotos</a></li>
+    <li><a class="scroll-link" href="#preise">Preise</a></li>
+    <li><a class="scroll-link" href="#faq">FAQ</a></li>
+	  <li><a class="scroll-link" href="#verfuegbarkeit">Verfügbarkeit</a></li>
+    <li><a class="scroll-link" href="#meinungen">Kontakt</a></li>
+	</ul>
+      </div>
+    </nav>
+
+
+
+
+
+  </section>
+
+  <section class="container-fluid" >
+    <div class="container">
+<div class="row">
+  <div class="col-md-12">
+    <h3>Herzlich Willkommen in unserem Ferienhaus! </h3>
+<h4>Im Jahr 2015 haben wir viel Mühe und Zeit damit verbracht, ein altes Haus in Bernau in neuem Glanz erscheinen zu lassen. Nun möchten wir Sie herzlich einladen, Brandenburg und Berlin von unserem liebevoll eingerichteten Domizil aus zu erkunden und zu genießen!<br>
+
+
+      Unmittelbar von den Toren Berlins gelegen bietet auch Bernau selbst viele Freizeit- und Erholungsmöglichkeiten für Singles und Familien. Unser Ferienhaus ist in einer ruhigen Nachbarschaft gelegen - ganz unter dem Motto: Ankommen und Wohlfühlen.
+
+Das Haus im Bungalow-Stil kommt ohne Treppen aus. Wohnzimmer, Küche sowie Essbereich sind in einem offenen Raum vereint, der durch eine große Fensterfront sowie natürliches Oberlicht auch bei Regenwetter viel Helligkeit bietet.
+
+Davon abgetrennt sind zwei Schlafzimmer mit insgesamt drei Schlafmöglichkeiten. Auf der Schlafcouch können zwei Personen übernachten. Auf Wunsch stellen wir auch gerne ein Kinderbett und Hochstuhl  zur Verfügung.
+
+Das Bad verfügt über eine Badewanne, eine moderne Dusche sowie Handtuchheizung. Die Küche ist voll ausgestattet mit Geschirrspüler, Backofen, Herd, und Mikrowelle .
+
+Die Terrasse lädt zum entspannten Zusammensein ein, im Gartenhaus stehen vier Gartenstühle, Gartentisch sowie Grill zur freien Verwendung bereit. Naschen Sie im Sommer gerne von unserem Obstbäumen! Auch Fahrräder für Ausflüge können bei Bedarf zur Verfügung gestellt werden. Das Auto steht gut geschützt unter einem Carport.
+  </h4></div>
+</div>
+
+<div class="row">
+
+
+</div>
+    </div>
+  </section>
+
+
+
+
 
 
 
@@ -79,37 +125,84 @@
 </iframe>
 
 
+</section>
+
+
+
+
+
+<section class="container-fluid" id="ausstattung">
+  <div class="container">
+<div class="row">
+<div class="col-md-12">
+  <h3>Ausstattung</h3>
+</div>
+</div>
+
+<div class="row">
+
+
+</div>
+  </div>
+</section>
 
 
 
 
 
 
-    </section>
-
-    <section class="container-fluid" id="ausstattung">
-      <div class="container">
-	<div class="row">
-	  <div class="col-md-12">
-      <h3>Ausstattung</h3>
-	  </div>
-	</div>
-
-	<div class="row">
 
 
-	</div>
-      </div>
-    </section>
+  <section class="container-fluid" style="padding:0px" id="fotos">
 
 
+    <img class="mySlides" src="images/slide01.jpg" style="width:100%">
+    <img class="mySlides" src="images/slide02.jpg" style="width:100%">
+
+
+    <a style="position:absolute;top:45%;left:20px;font-size:40px" onclick="plusDivs(-1)">❮</a>
+    <a style="position:absolute;top:45%;right:20px; font-size:40px" onclick="plusDivs(1)">❯</a>
+
+
+
+    <script>
+    var slideIndex = 1;
+    showDivs(slideIndex);
+
+    function plusDivs(n) {
+      showDivs(slideIndex += n);
+    }
+
+    function showDivs(n) {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      if (n > x.length) {slideIndex = 1}
+      if (n < 1) {slideIndex = x.length}
+      for (i = 0; i < x.length; i++) {
+         x[i].style.display = "none";
+      }
+      x[slideIndex-1].style.display = "block";
+    }
+    </script>
+
+
+
+
+
+
+
+    </div>
   </section>
 
-  <section class="container-fluid" id="fotos">
+
+
+
+
+  <section class="container-fluid" id="preise">
     <div class="container">
 <div class="row">
   <div class="col-md-12">
-    <h3>Fotos</h3>
+    <h3>Preise</h3>
   </div>
 </div>
 
@@ -119,6 +212,9 @@
 </div>
     </div>
   </section>
+
+
+
 
 
 
@@ -180,9 +276,6 @@ Hussitenfest
 	  <div class="col-md-12">
 	    <h3>Verfügbarkeit</h3>
 
-
-
-
   <center><div align="center" style="display:inline-block;"><iframe scrolling="no" width="518" height="770" frameBorder="0" style="overflow:hidden;border:5px" src="http://www.fewo-direkt.de/haow/widgets/calendar.html?propertyId=2499750&unitId=3043289&monthCount=12&orientation=full&site=homeaway_de"></iframe><a href="http://www.fewo-direkt.de/ferienwohnung-ferienhaus/p2499750" style="display:block;text-align:center;margin-top:-30px; font-size:12px;" rel="nofollow">FeWo-direkt.de #2499750</a></div>
 </center>
   </div>
@@ -190,6 +283,96 @@ Hussitenfest
       </div>
     </section>
 
+
+
+
+
+    <section class="container-fluid" id="faq">
+      <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Fragen und Antworten</h3>
+
+
+      <table style="width:100%; text-align:center">
+
+       <tr>
+         <td>Können wir Haustiere mitbringen?</td>
+         <td>Dürfen wir in Ihrem Haus rauchen?</td>
+
+       </tr>
+       <tr>
+         <td>Eve</td>
+         <td>Jackson</td>
+
+       </tr>
+       <tr>
+         <td>Sind auch kleine Kinder willkommen?</td>
+         <td>Welche Verkehrsmittel eignen sich am besten?</td>
+
+       </tr>
+
+       <tr>
+         <td>Eve</td>
+         <td>Jackson</td>
+
+       </tr>
+
+       <tr>
+         <td>Ab wann können wir anreisen und bis wann müssen wir abreisen?</td>
+         <td>Sollen wir über FeWo-direkt buchen oder über diese Website?</td>
+
+       </tr>
+
+
+       <tr>
+         <td>Eve</td>
+         <td>Jackson</td>
+
+       </tr>
+
+
+     </table>
+
+
+
+    </div>
+  </div>
+
+
+  <div class="row">
+
+
+
+
+
+  </div>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+    <section class="container-fluid" id="meinungen">
+      <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3 style="color:white">Kontakt</h3>
+    </div>
+  </div>
+
+  <div class="row">
+
+
+  </div>
+      </div>
+    </section>
 
 
 
